feat(alert-detection): parse drone events from kafka payloads